# IDT_SjS_map

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  ROADMAP.md  environment.yml  journal.md  pyproject.toml
data/processed/: alias_to_name.csv  hgnc_mapping_summary.md  hgnc_to_bnet.csv  hgnc_unmapped_nodes.csv  ref_sif_named.csv  sanitize_collisions.csv
data/raw/: CHECKSUMS.txt
docs/: audit_ap1_p38.md  audit_logique.md  audit_topologique.md  cover_letter.md  manuscript.md  manuscript_v2.md  manuscript_v3.md  response_to_reviewers.md  response_to_reviewers_v3.md  setup.md  stable_motifs_status.md
docs/reviewing/: 01_reviewer_modelisation_booleenne.md  02_reviewer_immuno_clinicien.md  03_reviewer_bioinfo_transcriptomique.md  04_reviewer_pharmaco_drug_discovery.md
results/phase1/: structural_diff.csv  structural_report.md
results/phase2/: attractor_catalog.csv  attractor_report.md
results/phase3/: annotation_report.md  attractor_cohort_distance.csv  deg_mapping.csv  pathway_profiles.csv
results/phase4/: control_report.md  druggable_targets.csv  perturbation_screen.csv
results/phase5/: assess_validation.csv  drug_simulation.csv  gse23117_validation.csv  validation_report.md
results/phase7/: ap1_p38_parallel_paths.csv  ap1_p38_upstream.csv  attractor_catalog_v2.csv  attractor_cohort_distance_v2.csv  attractor_report_v2.md  combinatorial_perturbations.csv  enrichment_attractors.csv  enrichment_cohorts.csv  enrichment_summary.md  gse23117_recadrage.md  isg_audit_v2.csv  sensitivity_specificity_auroc.csv  stable_motifs_status.md  threshold_sensitivity.csv  topology_ap1_p38.csv
src/: fetch_data.sh
tests/: test_attractor_counts.py  test_isg_activability.py  test_null_model_significance.py
workflow/: Snakefile
(+63 files in other folders)
