[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sjd-boolattractors"
version = "0.1.0"
description = "Boolean attractor analysis of the Sjögren's Disease Map"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SjD-BoolAttractors contributors" },
]
keywords = [
  "sjogren",
  "boolean-network",
  "attractors",
  "systems-biology",
  "molecular-interaction-map",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  # Conversion MIM -> SBML-qual
  "casq",
  # Solveurs et analyse de réseaux booléens
  "biolqm",
  "pyboolnet",
  "pystablemotifs",
  # Stack scientifique
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "networkx>=3.2",
  # SBML
  "python-libsbml",
  # Notebooks
  "jupyter",
  "ipykernel",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
]

[project.urls]
Repository = "https://github.com/[à compléter]/SjD-BoolAttractors"
Issues = "https://github.com/[à compléter]/SjD-BoolAttractors/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
